syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.naming;

import "ClassesDefinitions.proto";

message RegisterRequest {
  string name = 1;
  string host = 2;
  int32 port = 3;
  string qualifiers = 4;
 }
  
message RegisterResponse {
  int32 position = 1;
}

message LookupRequest {
  string name = 1;
  string qualifiers = 2;
}
 
message LookupResponse {
  repeated Server servers = 1;
}

message RemoveRequest {
  string name = 1;
  string host = 2;
  int32 port = 3;
}
 
message RemoveResponse {
}
 
service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc Lookup(LookupRequest) returns (LookupResponse);
  rpc remove(RemoveRequest) returns (RemoveResponse);
}